--- a/sk2-irc/mainpage.ui
+++ b/sk2-irc/mainpage.ui
@@ -46,6 +46,19 @@
     </rect>
    </property>
   </widget>
+  <widget class="QPushButton" name="testButton">
+   <property name="geometry">
+    <rect>
+     <x>40</x>
+     <y>280</y>
+     <width>80</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Test</string>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
